# DNA-Analyzer-Project

./: CMakeLists.txt  Makefile  README.md  main.cpp
docs/: UML-Package.md  UML-UseCase.md  UML-class.md
src/Controller/: Commands.cpp  Commands.h  Controller.cpp  Controller.h  InterfaceCMD.h
src/Model/: Codon.cpp  Codon.h  DataBase.h  DnaSequence.cpp  DnaSequence.h  IndexedDnaSequence.cpp  IndexedDnaSequence.h  Nucleotides.cpp  Nucleotides.h
src/View/: Parser.cpp  Parser.h  Print.cpp  Print.h
